# c-

./: CMakeLists.txt
25bHW1/: cis25bSpring2023BarryBalasinghamHw1.cpp  finalExamUtilityBarryBalasingham.cpp  finalExamUtilityBarryBalasingham.h  fractionBarryBalasingham.cpp  fractionBarryBalasingham.h  fractionUtilityBarryBalasingham.h  fractionUtilityFirstLast.cpp
25bHW2/: cis25bSpring2023BarryBalasinghamHw2.cpp  fractionBarryBalasingham.cpp  fractionBarryBalasingham.h  fractionUtilityBarryBalasingham.cpp  fractionUtilityBarryBalasingham.h  hw2UtilityBarryBalasingham.cpp  hw2UtilityBarryBalasingham.h  main.cpp  pointBarryBalasingham.cpp  pointBarryBalasingham.h  pointUtilityBarryBalasingham.cpp  pointUtilityBarryBalasingham.h
Final1/: cis25Fall2022BarryBalasinghamFinalA.cpp  finalExamUtilityBarryBalasingham.cpp  finalExamUtilityBarryBalasingham.h  fractionBarryBalasingham.cpp  fractionBarryBalasingham.h  fractionUtilityBarryBalasingham.cpp  fractionUtilityBarryBalasingham.h
GradeHW1/: cis25bSpring2023MichaelFigueiredoHw1_By_BarryBalasingham.cpp
HW1/: cis25Fall2022BarryBalasinghamHw1  cis25Fall2022BarryBalasinghamHw1.cpp
HW2/: cis25Fall2022BarryBalasinghamHw2  cis25Fall2022BarryBalasinghamHw2.cpp
HW3/: cis25Fall2022BarryBalasinghamHw3  cis25Fall2022BarryBalasinghamHw3.cpp
HW4/: cis25Fall2022BarryBalasinghamHw4.cpp
HW4/Include/: fraction-4.h
HW4/Source/: fraction-4.cpp
HW4/include/: fraction.h  utility.h
HW4/source/: fraction.cpp  utility.cpp
